Corrigiendo errores ortograficos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,11 +43,11 @@
 <h1>CONTACTO</h1>
 <div class="desarrollo">
     <p class="texto-contacto">
-        Escribinos queremos conocerte, saber que opinas de la pagina, que te gustaría ver o que cambios harias. ¿Conoces el juego? ¿Cual es tu personaje favorito?
+        Escribinos queremos conocerte, saber que opinas de la página, que te gustaría ver o que cambios harias. ¿Conoces el juego? ¿Cual es tu personaje favorito?
     </p>
     <p class="texto-contacto"></p>
     <p class="texto-contacto">
-        Tu opinion nos interesa!
+        Tu opinión nos interesa!
     </p>
 </div>
 
