--- a/pages/experience.html
+++ b/pages/experience.html
@@ -41,15 +41,15 @@
         <h1>EXPERIENCE</h1>
         <div class="desarrollo">
             
-            <p class="texto-experience">La linea de <span class="experience">EXPERIENCIA</span> es una de las tres rutas principales del mapa. Esta es crucial para ganar ventaja sobre tus oponentes y asegurar la victoria. Es esencial obtener la mayor cantidad de oro y experiencia en esta linea.</p>
-            <p class="texto-experience">Este carril te permite obtener experiencia de manera mas rapida y eficiente en comparacion a los otros jugadores, esto sucedera mientras mantengas el control de la linea eliminando a los subditos enemigos y alejando al oponente de los tuyos, permitiendo asi que los aliados avancen hacia las torres enemigas.</p>
-            <p class="texto-experience">El subir mas rapido de nivel te permite desbloquear y mejorar tus habilidades, lo que te dara mayor capacidad de infligir daño y sobrevivir a las peleas.</p>
-            <p class="texto-experience">En esta linea se recomienda usar los siguientes roles: <span class="experience">TANQUE</span> o <span class="experience">COMBATIENTE</span>. Los tanques son heroes de alta resistencia y capacidad para realizar daño. Su objetivo principal es proteger al equipo, iniciar peleas y controlar el campo de batalla. Suelen ir en la linea delantera y tienen habilidades de control de masa para inhabilitar a los enemigos. Por otro lado, los Combatientes son heroes que tienen habilidades tanto de ataque como de defensa. Pueden realizar daño considerable y son resistentes en el combate cuerpo a cuerpo. Suelen iniciar peleas, dañar a los enemigos y sobrevivir a situaciones complicadas.</p>
+            <p class="texto-experience">La línea de <span class="experience">EXPERIENCIA</span> es una de las tres rutas principales del mapa. Esta es crucial para ganar ventaja sobre tus oponentes y asegurar la victoria. Es esencial obtener la mayor cantidad de oro y experiencia en esta línea.</p>
+            <p class="texto-experience">Este carril te permite obtener experiencia de manera mas rápida y eficiente en comparación a los otros jugadores, esto sucederá mientras mantengas el control de la línea eliminando a los súbditos enemigos y alejando al oponente de los tuyos, permitiendo asi que los aliados avancen hacia las torres enemigas.</p>
+            <p class="texto-experience">El subir mas rápido de nivel te permite desbloquear y mejorar tus habilidades, lo que te dara mayor capacidad de infligir daño y sobrevivir a las peleas.</p>
+            <p class="texto-experience">En esta línea se recomienda usar los siguientes roles: <span class="experience">TANQUE</span> o <span class="experience">COMBATIENTE</span>. Los tanques son héroes de alta resistencia y capacidad para realizar daño. Su objetivo principal es proteger al equipo, iniciar peleas y controlar el campo de batalla. Suelen ir en la línea delantera y tienen habilidades de control de masa para inhabilitar a los enemigos. Por otro lado, los Combatientes son héroes que tienen habilidades tanto de ataque como de defensa. Pueden realizar daño considerable y son resistentes en el combate cuerpo a cuerpo. Suelen iniciar peleas, dañar a los enemigos y sobrevivir a situaciones complicadas.</p>
             
             </div>
 
         <hr>
-            <h2>HEROES</h2>
+            <h2>HÉROES</h2>
             <section id="galeria" class="container">
                 <div class="row ">
                     <div class="col-6 col-sm-4 col-md-3">
