--- a/pages/middle.html
+++ b/pages/middle.html
@@ -41,11 +41,12 @@
             <h1>MIDDLE</h1>
             <div class="desarrollo">
                 
-                <p class="texto-middle">La linea <span class="middle">MEDIA</span> es una de las tres rutas principales del mapa. Este carril tiene una posicion estrategica en el centro del mapa, lo que te brinda la capacidad de moverse rapidamente hacia otros carriles y areas importantes como la jungla, para ayudar a tus compañeros en caso de que lo necesiten, es decir, puedes tener impacto en todo el mapa. Tambien te brinda la capacidad de emboscar a los enemigos de otras lineas.</p> 
-                <p class="texto-middle">Ademas es clave para ejercer presion en las torres enemigas. Al derribar las torres del centro se abre el camino mas directo hacia el nexo enemigo.</p> 
-                <p class="texto-middle">En esta linea se recomienda usar <span class="middle">MAGOS</span>. Los Magos son heroes que infligen daño magico y que generalmente tienen habilidades de control de masas. Con sus habilidades pueden inhabilitar o relentizar a los enemigos para facilitar que su equipo los eliminen, controlar el campo de batalla y causar daño significativo.</p> 
+                <p class="texto-middle">La línea <span class="middle">MEDIA</span> es una de las tres rutas principales del mapa. Este carril tiene una posición estratégica en el centro del mapa, lo que te brinda la capacidad de moverse rápidamente hacia otros carriles y áreas importantes como la jungla, para ayudar a tus compañeros en caso de que lo necesiten, es decir, puedes tener impacto en todo el mapa. También te brinda la capacidad de emboscar a los enemigos de otras líneas.</p> 
+                <p class="texto-middle">Además es clave para ejercer presión en las torres enemigas. Al derribar las torres del centro se abre el camino más directo hacia el nexo enemigo.</p> 
+                <p class="texto-middle">En esta línea se recomienda usar <span class="middle">MAGOS</span>. Los Magos son héroes que infligen daño magico y que generalmente tienen habilidades de control de masas. Con sus habilidades pueden inhabilitar o relentizar a los enemigos para facilitar que su equipo los eliminen, controlar el campo de batalla y causar daño significativo.</p> 
             </div>
             <hr>
+            <h2>HÉROES</h2>
             <section  id="galeria" class="container">
                 <div class="row ">
                     <div class="col-6 col-sm-4 col-md-3">
