--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <main>
         <h1>MOBILE LEGENDS</h1>
         <div class="desarrollo">
-        <p class="texto-index">Mobile Legends: Bang Bang es un juego de estilo MOBA (Multiplayer Online Battle Arena) para dispositivos moviles, creado por la compañia Shanghai Moonton Technology.</p> 
-        <p class="texto-index">En este juego, los jugadores luchan en batallas de 5 vs 5 con el objetivo de destruir el nexo o base enemiga a la que se enfrentan. Los jugadores pueden elegir entre una gran variedad de heroes para jugar y cada uno de ellos tiene habilidades unicas. A medida que avanza el juego los jugadores ganan <span class="index">EXPERIENCIA</span>, utilizada para subir de nivel y desbloquear nuevas habilidades, y <span class="index">ORO</span>, el cual se puede utilizar para comprar objetos y mejorar el equipo del jugador.  </p> 
-        <p class="texto-index">Los jugadores deben seleccionar uno de los 6 roles dispoibles en el juego. Estos son: <span class="index">TANQUE</span>, <span class="index">COMBATIENTE</span>, <span class="index">ASESINO</span>, <span class="index">MAGO</span>, <span class="index">TIRADOR</span> y <span class="index">SOPORTE</span>. Cada rol tiene una posicion designada en el mapa a la que se le recomienda dirigirse. De esta manera, cada jugador ocupa una linea distinta, asugarando la ocupacion de las 5 lineas del mapa de juego.  </p>
+        <p class="texto-index">Mobile Legends: Bang Bang es un juego de estilo MOBA (Multiplayer Online Battle Arena) para dispositivos móviles, creado por la compañia Shanghai Moonton Technology.</p> 
+        <p class="texto-index">En este juego, los jugadores luchan en batallas de 5 vs 5 con el objetivo de destruir el nexo o base enemiga a la que se enfrentan. Los jugadores pueden elegir entre una gran variedad de héroes para jugar y cada uno de ellos tiene habilidades únicas. A medida que avanza el juego los jugadores ganan <span class="index">EXPERIENCIA</span>, utilizada para subir de nivel y desbloquear nuevas habilidades, y <span class="index">ORO</span>, el cual se puede utilizar para comprar objetos y mejorar el equipo del jugador.  </p> 
+        <p class="texto-index">Los jugadores deben seleccionar uno de los 6 roles disponibles en el juego. Estos son: <span class="index">TANQUE</span>, <span class="index">COMBATIENTE</span>, <span class="index">ASESINO</span>, <span class="index">MAGO</span>, <span class="index">TIRADOR</span> y <span class="index">SOPORTE</span>. Cada rol tiene una posición designada en el mapa a la que se le recomienda dirigirse. De esta manera, cada jugador ocupa una línea distinta, asegurando la ocupación de las 5 líneas del mapa de juego.  </p>
         </div>
         <hr>
         <!-- GALERIA DE PERSONAJES  -->
-        <h2>HEROES</h2>
+        <h2>HÉROES</h2>
         <section id="galeria" class="container">
             <div class="row ">
                 <div class="col-6 col-sm-4 col-md-3">
