--- a/pages/gold.html
+++ b/pages/gold.html
@@ -117,7 +117,7 @@
             </div>
         </section>
     </main>
-    
+
     <!-- FOOTER -->
     <footer>
         <h3 class="juego"><a href="./gold.html">MOBILE LEGENDS</a></h3>
@@ -134,7 +134,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        AOS.init();
+        AOS.init({duration:1000});
     </script>
 </body>
 </html>
