--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <label for="check" class="menu-icon">
                 <i class='bx bx-menu ' style='color:#ffffff'  ></i>
             </label>
-            <a href="../index.html" class="enlace">
+            <a href="./index.html" class="enlace">
                 <img class="logo" src="./media/logo.png" alt="">
             </a>
             <ul>
