--- a/pages/gold.html
+++ b/pages/gold.html
@@ -51,68 +51,89 @@
             <div class="row ">
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/beatrix.jpg" alt="beatrix">
+                    <p class="nombre-img">Beatrix</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/brody.jpg" alt="brody">
+                    <p class="nombre-img">Brody</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/popol-y-kupa.jpg" alt="popol-y-kupa">
+                    <p class="nombre-img">Popol-y-Kupa</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/wan-wan.jpg" alt="wan-wan">
+                    <p class="nombre-img">Wan-Wan</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/kimmy.jpg" alt="kimmy">
+                    <p class="nombre-img">Kimmy</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/claude.jpg" alt="claude">
+                    <p class="nombre-img">Claude</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/lesley.jpg" alt="lesley">
+                    <p class="nombre-img">Lesley</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/moskov.jpg" alt="moskov">
+                    <p class="nombre-img">Moskov</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/miya.jpeg" alt="miya">
+                    <p class="nombre-img">Miya</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/layla.jpg" alt="layla">
+                    <p class="nombre-img">Layla</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/clint.jpg" alt="clint">
+                    <p class="nombre-img">Clint</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/bruno.jpg" alt="bruno">
+                    <p class="nombre-img">Bruno</p>
                 </div>
             </div>
             <div class="row ">
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/karrie.jpg" alt="karrie">
+                    <p class="nombre-img">Karrie</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/melissa.jpg" alt="melissa">
+                    <p class="nombre-img">Melissa</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/natan.jpg" alt="natan">
+                    <p class="nombre-img">Natan</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/granger.jpg" alt="granger">
+                    <p class="nombre-img">Granger</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/hanabi.jpg" alt="hanabi">
+                    <p class="nombre-img">Hanabi</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/irithel.jpg" alt="irithel">
+                    <p class="nombre-img">Irithel</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/yi-sun-shin.jpg" alt="yi-sun-shin">
+                    <p class="nombre-img">Yi-Sun-Shin</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/edith.jpg" alt="edith">
+                    <p class="nombre-img">Edith</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/roger.jpg" alt="roger">
+                    <p class="nombre-img">Roger</p>
                 </div>
             </div>
         </section>
