--- a/pages/jungle.html
+++ b/pages/jungle.html
@@ -52,115 +52,151 @@
             <div class="row ">
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/freya.jpg" alt="freya">
+                    <p class="nombre-img">Freya</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/chou.jpg" alt="chou">
+                    <p class="nombre-img">Chou</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/arlott.jpg" alt="arlott">
+                    <p class="nombre-img">Arlott</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/fanny.jpg" alt="fanny">
+                    <p class="nombre-img">Fanny</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/joy.jpg" alt="joy">
+                    <p class="nombre-img">Joy</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/julian.jpg" alt="julian">
+                    <p class="nombre-img">Julian</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/aulus.jpg" alt="aulus">
+                    <p class="nombre-img">Aulus</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/paquito.jpg" alt="paquito">
+                    <p class="nombre-img">Paquito</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/barats.jpg" alt="barats">
+                    <p class="nombre-img">Barats</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/baxia.jpg" alt="baxia">
+                    <p class="nombre-img">Baxia</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/ling.jpg" alt="ling">
+                    <p class="nombre-img">Ling</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/kimmy.jpg" alt="kimmy">
+                    <p class="nombre-img">Kimmy</p>
                 </div>
             </div>
             <div class="row ">
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/hanzo.jpg" alt="hanzo">
+                    <p class="nombre-img">Hanzo</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/leomord.jpg" alt="leomord">
+                    <p class="nombre-img">Leomord</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/selena.jpg" alt="selena">
+                    <p class="nombre-img">Selena</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/gusion.jpg" alt="gusion">
+                    <p class="nombre-img">Gusion</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/lancelot.jpg" alt="lancelot">
+                    <p class="nombre-img">Lancelot</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/harley.jpg" alt="harley">
+                    <p class="nombre-img">Harley</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/natalia.jpg" alt="natalia">
+                    <p class="nombre-img">Natalia</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/hayabusa.jpg" alt="hayabusa">
+                    <p class="nombre-img">Hayabusa</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/karina.jpg" alt="karina">
+                    <p class="nombre-img">Karina</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/balmond.jpg" alt="balmond">
+                    <p class="nombre-img">Balmond</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/saber.jpg" alt="saber">
+                    <p class="nombre-img">Saber</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/zilong.jpg" alt="zilong">
+                    <p class="nombre-img">Zilong</p>
                 </div>
             </div>
             <div class="row ">
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/alucard.jpg" alt="alucard">
+                    <p class="nombre-img">Alucard</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/roger.jpg" alt="roger">
+                    <p class="nombre-img">Roger</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/yin.jpg" alt="yin">
+                    <p class="nombre-img">Yin</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/aamon.jpg" alt="aamon">
+                    <p class="nombre-img">Aamon</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/benedetta.jpg" alt="benedetta">
+                    <p class="nombre-img">Benedetta</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/dyrroth.jpg" alt="dyrroth">
+                    <p class="nombre-img">Dyrroth</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/granger.jpg" alt="granger">
+                    <p class="nombre-img">Granger</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/martis.jpg" alt="martis">
+                    <p class="nombre-img">Martis</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/alpha.jpg" alt="alpha">
+                    <p class="nombre-img">Alpha</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/cyclops.jpg" alt="cyclops">
+                    <p class="nombre-img">Cyclops</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/esmeralda.jpg" alt="esmeralda">
+                    <p class="nombre-img">Esmeralda</p>
                 </div>
                 <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/natan.jpg" alt="natan">
+                    <p class="nombre-img">Natan</p>
                 </div>
             </div>
     </div>
