--- a/pages/roam.html
+++ b/pages/roam.html
@@ -53,115 +53,151 @@
             <div class="row ">
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/fanny.jpg" alt="fanny">
+                <p class="nombre-img">Fanny</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/akai.jpg" alt="akai">
+                <p class="nombre-img">Akai</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/franco.jpg" alt="franco">
+                <p class="nombre-img">Franco</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/floryn.jpg" alt="floryn">
+                <p class="nombre-img">Floryn</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/faramis.jpg" alt="faramis">
+                <p class="nombre-img">Faramis</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/mathilda.jpg" alt="mathilda">
+                <p class="nombre-img">Mathilda</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/barats.jpg" alt="barats">
+                <p class="nombre-img">Barats</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/atlas.jpg" alt="atlas">
+                <p class="nombre-img">Atlas</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/baxia.jpg" alt="baxia">
+                <p class="nombre-img">Baxia</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/minsittar.jpg" alt="minsittar">
+                <p class="nombre-img">Minsittar</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/kaja.jpg" alt="kaja">
+                <p class="nombre-img">Kaja</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/uranus.jpg" alt="uranus">
+                <p class="nombre-img">Uranus</p>
             </div>
             </div>
             <div class="row ">
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/hylos.jpg" alt="hylos">
+                <p class="nombre-img">Hylos</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/grock.jpg" alt="grock">
+                <p class="nombre-img">Grock</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/ruby.jpg" alt="ruby">
+                <p class="nombre-img">Ruby</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/lolita.jpg" alt="lolita">
+                <p class="nombre-img">Lolita</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/nana.jpg" alt="nana">
+                <p class="nombre-img">Nana</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/tigreal.jpg" alt="tigreal">
+                <p class="nombre-img">Tigreal</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/rafaela.jpg" alt="rafaela">
+                <p class="nombre-img">Rafaela</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/angela.jpg" alt="angela">
+                <p class="nombre-img">Angela</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/diggie.jpg" alt="diggie">
+                <p class="nombre-img">Diggie</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/estes.jpg" alt="estes">
+                <p class="nombre-img">Estes</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/edith.jpg" alt="edith">
+                <p class="nombre-img">Edith</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/gloo.jpg" alt="gloo">
+                <p class="nombre-img">Gloo</p>
             </div>
             </div>
             <div class="row ">
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/carmilla.jpg" alt="carmilla">
+                <p class="nombre-img">Carmilla</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/khufra.jpg" alt="khufra">
+                <p class="nombre-img">Khufra</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/belerick.jpg" alt="belerick">
+                <p class="nombre-img">Belerick</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/gatotkaca.jpg" alt="gatotkaca">
+                <p class="nombre-img">Gatotkaca</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/johnson.jpg" alt="johnson">
+                <p class="nombre-img">Johnson</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/novaria.jpg" alt="novaria">
+                <p class="nombre-img">Novaria</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/esmeralda.jpg" alt="esmeralda">
+                <p class="nombre-img">Esmeralda</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/balmond.jpg" alt="balmond">
+                <p class="nombre-img">Balmond</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/hilda.jpg" alt="hilda">
+                <p class="nombre-img">Hilda</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/jawhead.jpg" alt="jawhead">
+                <p class="nombre-img">Jawhead</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/selena.jpg" alt="selena">
+                <p class="nombre-img">Selena</p>
             </div>
             <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/leomord.jpg" alt="leomord">
+                <p class="nombre-img">Leomord</p>
             </div>
             </div>
         </section>
