--- a/pages/experience.html
+++ b/pages/experience.html
@@ -55,115 +55,151 @@
                 <div class="row ">
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/freya.jpg" alt="freya">
+                        <p class="nombre-img">Freya</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/chou.jpg" alt="chou">
+                        <p class="nombre-img">Chou</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/arlott.jpg" alt="arlott">
+                        <p class="nombre-img">Arlott</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/joy.jpg" alt="joy">
+                        <p class="nombre-img">Joy</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/fredrinn.jpg" alt="fredrinn">
+                        <p class="nombre-img">Fredrinn</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/julian.jpg" alt="julian">
+                        <p class="nombre-img">Julian</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/phoveus.jpg" alt="phoveus">
+                        <p class="nombre-img">Phoveus</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/yu-zhong.jpg" alt="yu-zhong">
+                        <p class="nombre-img">Yu-Zhong</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/silvanna.jpg" alt="silvanna">
+                        <p class="nombre-img">Silvanna</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/masha.jpg" alt="masha">
+                        <p class="nombre-img">Masha</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/x-borg.jpg" alt="x-borg">
+                        <p class="nombre-img">X-Borg</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/terizla.jpg" alt="terizla">
+                        <p class="nombre-img">Terizla</p>
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/badang.jpg" alt="badang">
+                        <p class="nombre-img">Badang</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/minsittar.jpg" alt="minsittar">
+                        <p class="nombre-img">Minsittar</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/thamuz.jpg" alt="thamuz">
+                        <p class="nombre-img">Thamuz</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/aldous.jpg" alt="aldous">
+                        <p class="nombre-img">Aldous</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/jawhead.jpg" alt="jawhead">
+                        <p class="nombre-img">Jawhead</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/argus.jpg" alt="argus">
+                        <p class="nombre-img">Argus</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/lapu-lapu.jpg" alt="lapu-lapu">
+                        <p class="nombre-img">Lapu-Lapu</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/ruby.jpg" alt="ruby">
+                        <p class="nombre-img">Ruby</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/sun.jpg" alt="sun">
+                        <p class="nombre-img">Sun</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/balmond.jpg" alt="balmond">
+                        <p class="nombre-img">Balmond</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/bane.jpg" alt="bane">
+                        <p class="nombre-img">Bane</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/zilong.jpg" alt="zilong">
+                        <p class="nombre-img">Zilong</p>
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/alice.jpg" alt="alice">
+                        <p class="nombre-img">Alice</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/hilda.jpg" alt="hilda">
+                        <p class="nombre-img">Hilda</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/edith.jpg" alt="edith">
+                        <p class="nombre-img">Edith</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/khaleed.jpg" alt="khaleed">
+                        <p class="nombre-img">Khaleed</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/dyrroth.jpg" alt="dyrroth">
+                        <p class="nombre-img">Dyrroth</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/esmeralda.jpg" alt="esmeralda">
+                        <p class="nombre-img">Esmeralda</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/guinevere.jpg" alt="guinevere">
+                        <p class="nombre-img">Guinevere</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/martis.jpg" alt="martis">
+                        <p class="nombre-img">Martis</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/gatotkaca.jpg" alt="gatotkaca">
+                        <p class="nombre-img">Gatotkaca</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/alpha.jpg" alt="alpha">
+                        <p class="nombre-img">Alpha</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/vexana.jpg" alt="vexana">
+                        <p class="nombre-img">Vexana</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/belerick.jpg" alt="belerick">
+                        <p class="nombre-img">Belerick</p>
                     </div>
                 </div>
             </section>
