--- a/pages/middle.html
+++ b/pages/middle.html
@@ -52,77 +52,101 @@
                 <div class="row ">
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/aurora.jpg" alt="aurora">
+                        <p class="nombre-img">Aurora</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/novaria.jpg" alt="novaria">
+                        <p class="nombre-img">Novaria</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/xavier.jpg" alt="xavier">
+                        <p class="nombre-img">Xavier</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/yve.jpg" alt="yve">
+                        <p class="nombre-img">Yve</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/lylia.jpg" alt="lylia">
+                        <p class="nombre-img">Lylia</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/kadita.jpg" alt="kadita">
+                        <p class="nombre-img">Kadita</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/harith.jpg" alt="harith">
+                        <p class="nombre-img">Harith</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/lunox.jpg" alt="lunox">
+                        <p class="nombre-img">Lunox</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/pharsa.jpg" alt="pharsa">
+                        <p class="nombre-img">Pharsa</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/zhask.jpg" alt="zhask">
+                        <p class="nombre-img">Zhask</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/vexana.jpg" alt="vexana">
+                        <p class="nombre-img">Vexana</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/kagura.jpg" alt="kagura">
+                        <p class="nombre-img">Kagura</p>
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/nana.jpg" alt="nana">
+                        <p class="nombre-img">Nana</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/eudora.jpg" alt="eudora">
+                        <p class="nombre-img">Eudora</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/cyclops.jpg" alt="cyclops">
+                        <p class="nombre-img">Cyclops</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/alice.jpg" alt="alice">
+                        <p class="nombre-img">Alice</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/gord.jpg" alt="gord">
+                        <p class="nombre-img">Gord</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/valentina.jpg" alt="valentina">
+                        <p class="nombre-img">Valentina</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/luo-yi.jpg" alt="luo-yi">
+                        <p class="nombre-img">Luo-Yi</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/cecilon.jpg" alt="cecilon">
+                        <p class="nombre-img">Cecilion</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/vale.jpg" alt="vale">
+                        <p class="nombre-img">Vale</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/change.jpg" alt="change">
+                        <p class="nombre-img">Change</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/valir.jpg" alt="valir">
+                        <p class="nombre-img">Valir</p>
                     </div>
                     <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/odette.jpg" alt="odette">
+                        <p class="nombre-img">Odette</p>
                     </div>
                 </div>
             </section>
