arreglando el index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
         <p class="texto-index">En este juego, los jugadores luchan en batallas de 5 vs 5 con el objetivo de destruir el nexo o base enemiga a la que se enfrentan. Los jugadores pueden elegir entre una gran variedad de héroes para jugar y cada uno de ellos tiene habilidades únicas. A medida que avanza el juego los jugadores ganan <span class="index">EXPERIENCIA</span>, utilizada para subir de nivel y desbloquear nuevas habilidades, y <span class="index">ORO</span>, el cual se puede utilizar para comprar objetos y mejorar el equipo del jugador.  </p> 
         <p class="texto-index">Los jugadores deben seleccionar uno de los 6 roles disponibles en el juego. Estos son: <span class="index">TANQUE</span>, <span class="index">COMBATIENTE</span>, <span class="index">ASESINO</span>, <span class="index">MAGO</span>, <span class="index">TIRADOR</span> y <span class="index">SOPORTE</span>. Cada rol tiene una posición designada en el mapa a la que se le recomienda dirigirse. De esta manera, cada jugador ocupa una línea distinta, asegurando la ocupación de las 5 líneas del mapa de juego.  </p>
         </div>
-        <hr>
+        <h2>MODOS DE JUEGO</h2>
+        <div class="desarrollo">
+            <p class="texto-index">Mobile Legends ofrece varios modos de juego, los principales son:</p>
+            <p class="texto-index"> <span class="index">Modo Clásico</span>: Es el más tradicional y el núcleo del juego, donde los jugadores pueden experimentar partidas más largas y estratégicas.</p>
+            <p class="texto-index"><span class="index">Modo Clasificatoria (Ranked)</span>: Es el modo más competitivo, son partidas clasificatorias eb las cuales los jugadores reciben puntos de rango (estrellas) según su rendimiento durante la partida. Al ganar, los jugadores ascienden en la clasificación, mientras que las derrotas pueden llevarlos a perder puntos de rango.</p>
+            <p class="texto-index"><span class="index">Modo Coliseo</span>: Este modo ofrece partidas rápidas y freneticas en un mapa pequeño con reglas especiales. Las partidas suelen durar menos que en los modos Clásicos y Ranked.</p>
+            <p class="texto-index"><span class="index">Modo VS IA (Inteligencia Artificial)</span>: En este modo los jugadores pueden enfrentarse a equipos controlados por la IA del juego. Es una excelente opción para jugadores que desean familiarizarse con el juego, probar a un héroe o mejorar sus habilidades antes de enfrentarse a jugadores reales en modos más competitivos.</p>
+            <p class="texto-index"><span class="index">Modo Personalizado</span>: Este modo permite a los jugadores crear partidas personalizadas con amigos o jugadores específicos. Puedes ajustar las reglas y condiciones de la partida para adaptarla a tus preferencias. Este modo es ideal para practicar estrategias con amigos o simplemente divertirse en partidas privadas.</p>
+            <p class="texto-index"><span class="index">Modo Arcade</span>: El modo Arcade es una serie de modos de juego alternativos que se diferencian del modo 5v5. Estos modos suelen ser más caóticos y divertidos, y ofrecen una experiencia de juego diferente.</p>
+        </div>
         <!-- GALERIA DE PERSONAJES  -->
         <h2>CAMPO DE BATALLA</h2>
         <div class="campo">
@@ -67,7 +76,7 @@
         <a href="https://www.tiktok.com/@mlbbttofficial?lang=en" target="_blank" class="icono-redes"><i class='bx bxl-tiktok' ></i></a>
         <a href="https://m.mobilelegends.com/en" class="icono-redes"><i class='bx bx-globe'></i></a>
     </div>
-    <span class="copyright">&copy;2023. VirginiaNardi. Pagina sin fines de lucro.</span>
+    <span class="copyright">&copy;2023. VirginiaNardi. Página sin fines de lucro.</span>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
