--- a/pages/roam.html
+++ b/pages/roam.html
@@ -213,7 +213,7 @@
             <a href="https://www.tiktok.com/@mlbbttofficial?lang=en" target="_blank" class="icono-redes"><i class='bx bxl-tiktok' ></i></a>
             <a href="https://m.mobilelegends.com/en" class="icono-redes"><i class='bx bx-globe'></i></a>
         </div>
-        <span class="copyright">&copy;2023. VirginiaNardi. Pagina sin fines de lucro.</span>
+        <span class="copyright">&copy;2023. VirginiaNardi. Página sin fines de lucro.</span>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
